--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Yantuo Zhang # your name (or website title) here
+logo: "/images/yantuo_photo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
@@ -10,4 +10,4 @@ description: > # your text below (remove <br> elements if you don't need line br
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: G-52XKDCCKZJ # your Google Analytics tracking ID here
